@@ -15,6 +15,7 @@ CHANGES INTRODUCED IN XINS 1.1.0 BETA 3:
     Removed all logdoc entries in the range 20xx.
 
 * XINS/Java Common Library:
+  - Fixed SF.net bug #1103793: ExpiryFolder accuracy low.
   - Added a toHexString(char) method to the HexConverter class.
   - Fixed various Checkstyle-reported issues.
 
